--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="/game/" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Reece</span>
+								<a href="/crgloballeisureltd/" class="logo">
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">C&R Global Leisure Ltd</span>
 								</a>
 
 							<!-- Nav -->
@@ -39,7 +39,7 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="/game">Home</a></li>
+							<li><a href="/crgloballeisureltd">Home</a></li>
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Game.</h1>
+								<h1>Welcome</h1>
 								<p>See links below:</p>
 							</header>
 							<section class="tiles">
@@ -58,9 +58,9 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Nintendo</h2>
+										<h2>Red</h2>
 										<div class="content">
-											<p>ReeceHaigh</p>
+											<p>Desc</p>
 										</div>
 									</a>
 								</article>
@@ -69,9 +69,9 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Playstation</h2>
+										<h2>Blue</h2>
 										<div class="content">
-											<p>Reeceh12</p>
+											<p>Desc</p>
 										</div>
 									</a>
 								</article>
@@ -80,9 +80,9 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Xbox</h2>
+										<h2>Green</h2>
 										<div class="content">
-											<p>ReeceHaigh</p>
+											<p>Desc</p>
 										</div>
 									</a>
 								</article>
@@ -159,7 +159,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="https://reecehaigh.com">Reece</a></li>
 							</ul>
 						</div>
 					</footer>
