--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="/crgloballeisureltd">Home</a></li>
-							<li><a href="generic.html">Generic</a></li>
+							<li><a href="turkshead.html">Turks Head, Darlington</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</nav>
