--- a/turkshead.html
+++ b/turkshead.html
@@ -40,10 +40,10 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="turkshead.html">Turks Head, Darlington</a></li>
+							<li><a href="staginn.html">Stag Inn, Stockton</a></li>
+							<li><a href="whiteswann.html">White Swann, Huddersfield</a></li>
+							<li><a href="cheshireinn.html">Cheshire Inn, Crewe</a></li>
 						</ul>
 					</nav>
 
