--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 						<ul>
 							<li><a href="/crgloballeisureltd">Home</a></li>
 							<li><a href="turkshead.html">Turks Head, Darlington</a></li>
-							<li><a href="elements.html">Stag Inn, Stockton</a></li>
+							<li><a href="staginn.html">Stag Inn, Stockton</a></li>
+							<li><a href="whiteswann.html">White Swann, Huddersfield, Stockton</a></li>
+							<li><a href="cheshireinn.html">Cheshire Inn, Crewe</a></li>
 						</ul>
 					</nav>
 
