--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<li><a href="/crgloballeisureltd">Home</a></li>
 							<li><a href="turkshead.html">Turks Head, Darlington</a></li>
 							<li><a href="staginn.html">Stag Inn, Stockton</a></li>
-							<li><a href="whiteswann.html">White Swann, Huddersfield, Stockton</a></li>
+							<li><a href="whiteswann.html">White Swann, Huddersfield</a></li>
 							<li><a href="cheshireinn.html">Cheshire Inn, Crewe</a></li>
 						</ul>
 					</nav>
@@ -79,39 +79,6 @@
 										<h2>Green</h2>
 										<div class="content">
 											<p>Desc</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
-										<div class="content">
-											<p>Text.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
-										<div class="content">
-											<p>Text.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Text.</p>
 										</div>
 									</a>
 								</article>
